--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -15,7 +15,7 @@
         <action
             android:id="@+id/action_hot_to_detail"
             app:destination="@id/detailFragment"
-            app:exitAnim="@anim/fragment_fade_exit" />
+            app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/newlistFragment"
@@ -43,15 +43,15 @@
     <action
         android:id="@+id/action_global_hotlistFragment"
         app:destination="@+id/hotlistFragment"
-        app:enterAnim="@anim/fragment_fade_enter"
-        app:exitAnim="@anim/fragment_fade_exit"
+        app:enterAnim="@anim/nav_default_enter_anim"
+        app:exitAnim="@anim/nav_default_exit_anim"
         app:popUpTo="@+id/navigation_graph"
         app:popUpToInclusive="true" />
     <action
         android:id="@+id/action_global_newlistFragment"
         app:destination="@+id/newlistFragment"
-        app:enterAnim="@anim/fragment_fade_enter"
-        app:exitAnim="@anim/fragment_fade_exit"
+        app:enterAnim="@anim/nav_default_enter_anim"
+        app:exitAnim="@anim/nav_default_exit_anim"
         app:popUpTo="@+id/navigation_graph"
         app:popUpToInclusive="true" />
     <action
